sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  var n = getNombreValeurs()
  var c = 1
  var parc = 0
  while (c=n) {
    
    for (i<-0 to (n-2)) {
      
      if ((getValeur(i))>getValeur(i+1)) {
        echange(i,(i+1))
        c=c+1
        
      }
     
    }
    
    c=c+1
  }
}